--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,15 +1,21 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (submit)="onSubmit()">
-    <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" id="username" [(ngModel)]="username" name="username" required>
+<div class="main">
+  <div class="content">
+    <h1>Welcom to the gulag</h1>
+    <div class="login-container">
+      <h2>Login</h2>
+      <form (submit)="onSubmit()">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input class="form-control"  type="text" id="username" [(ngModel)]="username" name="username" required>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input class="form-control" type="password" id="password" [(ngModel)]="password" name="password" required>
+        </div>
+        <button class="btn btn-lg btn-primary" type="submit">Login</button>
+        <a routerLink="[/register]">Registrarse</a>
+      </form>
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-    <a href="/register">Registrarse</a>
-  </form>
+
+  </div>
 </div>
