--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,21 +1,40 @@
-<div class="main">
-  <div class="content">
-    <h1>Welcom to the gulag</h1>
+   <div class="content">
     <div class="login-container">
-      <h2>Login</h2>
-      <form (submit)="onSubmit()">
-        <div class="form-group">
-          <label for="username">Username:</label>
-          <input class="form-control"  type="text" id="username" [(ngModel)]="username" name="username" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input class="form-control" type="password" id="password" [(ngModel)]="password" name="password" required>
-        </div>
-        <button class="btn btn-lg btn-primary" type="submit">Login</button>
-        <a routerLink="[/register]">Registrarse</a>
-      </form>
-    </div>
+      <img class="logo-ucu" src="assets/logo_ucu.svg">
+      <div *ngIf="!estavalidando; else cargando">
+        <h2>Iniciar Sesión:</h2>
+        <form (submit)="onSubmit()">
+          <div class="form-group">
+            <label for="username">Correo Electronico:</label>
+            <input class="form-control"  type="text" id="username" [(ngModel)]="username" name="username" placeholder="example@ucu.edu.uy" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Contraseña:</label>
+            <input class="form-control" type="password" id="password" [(ngModel)]="password" name="password" placeholder="ingrese contraseña" required>
+          </div>
+          <div class="btn-group" role="group" aria-label="grupo login">
 
+            <button class="btn btn-primary" type="submit">
+            <span class="ico material-symbols-outlined">
+              login
+            </span>
+              Acceder
+            </button>
+            <button class="btn btn-light" (click)="registrarse()">
+            <span class="ico material-symbols-outlined">
+              app_registration
+            </span>
+              Registrarse
+            </button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+     <ng-template #cargando>
+       <div class="spinner-grow text-primary" role="status">
+         <span class="visually-hidden">Loading...</span>
+       </div>
+       <h6>Procesando</h6>
+     </ng-template>
   </div>
-</div>
