--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -35,6 +35,6 @@
        <div class="spinner-grow text-primary" role="status">
          <span class="visually-hidden">Loading...</span>
        </div>
-       <h6>Procesando</h6>
+       <h6>Procesando...</h6>
      </ng-template>
   </div>
