--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,18 +1,53 @@
-<div class="register-container">
-  <h2>Registrar</h2>
-  <form (submit)="onSubmit()">
-    <div class="form-group">
-      <label for="username">Nombre de usuario:</label>
-      <input type="text" id="username" [(ngModel)]="username" name="username" required>
-    </div>
-    <div class="form-group">
-      <label for="email">Correo electrónico:</label>
-      <input type="email" id="email" [(ngModel)]="email" name="email" required>
-    </div>
-    <div class="form-group">
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" [(ngModel)]="password" name="password" required>
-    </div>
-    <button type="submit">Registrar</button>
-  </form>
+<div class="content">
+  <div *ngIf="!registrando; else procesando" class="register-container">
+    <img class="logo-ucu" src="assets/logo_ucu.svg">
+    <h2>Registrar</h2>
+    <form (submit)="onSubmit()">
+      <div class="form-group">
+        <label for="cedula">Cédula de Identidad:</label>
+        <input class="form-control" type="text" id="cedula" [(ngModel)]="func.ci" name="cedula" required>
+      </div>
+      <div class="form-group">
+        <label for="nombre">Nombre:</label>
+        <input class="form-control" type="text" id="nombre" [(ngModel)]="func.nombre" name="nombre" required>
+      </div>
+      <div class="form-group">
+        <label for="apellido">Apellido:</label>
+        <input class="form-control" type="text" id="apellido" [(ngModel)]="func.apellido" name="apellido" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Correo electrónico:</label>
+        <input class="form-control" type="email" id="email" [(ngModel)]="func.email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="password">Contraseña:</label>
+        <input class="form-control" type="password" id="password" [(ngModel)]="func.pasword" name="password" required>
+      </div>
+      <div class="form-group">
+        <label for="fch_nac">Fecha Nacimiento:</label>
+        <input class="form-control" type="date" id="fch_nac" [(ngModel)]="func.fch_Nac" name="fch_nac" required>
+      </div>
+      <div class="form-group">
+        <label for="direccion">Dirección:</label>
+        <input class="form-control" type="password" id="direccion" [(ngModel)]="func.direccion" name="direccion" required>
+      </div>
+      <div class="form-group">
+        <label for="telefono">Telefono:</label>
+        <input class="form-control" type="password" id="telefono" [(ngModel)]="func.telefono" name="telefono" required>
+      </div>
+      <button class="btn-primary btn " type="submit" >
+      <span class="ico material-symbols-outlined">
+        app_registration
+      </span>
+        Registrar
+      </button>
+    </form>
+  </div>
 </div>
+
+<ng-template #procesando>
+  <div class="spinner-grow text-primary" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+  <h6>Procesando...</h6>
+</ng-template>
