--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -61,3 +61,9 @@ input {
   width: 100%;
   box-sizing: border-box;
 }
+.cargando{
+  margin-left: auto;
+  margin-right: auto;align-items: center;
+  justify-content: center;
+  display: flex;
+}
