--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -32,9 +32,11 @@
 
     </div>
      <ng-template #cargando>
-       <div class="spinner-grow text-primary" role="status">
-         <span class="visually-hidden">Loading...</span>
+       <div class="cargado">
+         <div class="spinner-grow text-primary" role="status">
+           <span class="visually-hidden">Loading...</span>
+         </div>
+         <h6>Procesando...</h6>
        </div>
-       <h6>Procesando...</h6>
      </ng-template>
   </div>
