--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,8 +1,9 @@
 .register-container {
-  min-width: 400px;
+  min-width: 500px;
   width: 60vw;
-  max-width: 600px;
-  margin: 50px auto;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
   backdrop-filter: blur(50px);
   border: 1px solid #ccc;
   padding: 30px;
