--- a/src/app/components/loggedhub/loggedhub.component.css
+++ b/src/app/components/loggedhub/loggedhub.component.css
@@ -7,13 +7,34 @@
     display: flex;
     justify-content: center;
 }
+.form-gp{
+    display: flex;
+    align-items: start;
+}
 
 .card{
     width: fit-content;
+    padding: 2vw;
+}
+.card-title{
+    text-align: center;
+    margin-bottom: 2vw;
 }
 
 #container{
     display: flex;
     flex-direction: column;
     align-items: center
+}
+form{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1vw;
+    flex-direction: column;
+}
+input{
+flex: 1 0 10rem;
+}
+button{
+   width: fit-content;
 }
