Agenda stepper para facilitar logica de pedir hora

--- a/src/app/components/loggedhub/loggedhub.component.html
+++ b/src/app/components/loggedhub/loggedhub.component.html
@@ -92,7 +92,7 @@
           </li>
         </ul>
         <span class="navbar-text">
-          <button class="btn btn-outline-danger">
+          <button class="btn btn-outline-danger" (click)="logout()">
             <span class="material-symbols-outlined">
             logout
             </span>
