--- a/src/app/components/hubpages/carnetsalud/carnetsalud.component.html
+++ b/src/app/components/hubpages/carnetsalud/carnetsalud.component.html
@@ -1,24 +1,35 @@
 <div class="fondo">
   <div class="card" >
+    <h5 class="card-header header-card">Cargar carnet</h5>
     <div class="card-body text-center">
-      <h5 class="card-title">Cargar carnet</h5>
-      <form [formGroup]="carnetFormGroup" (submit)="onSubmit();" >
-        <div class="form-gp">
-          <input type="text" id="ci" placeholder="Cedula" formControlName="ci" name="ci" required>
+      <form class="row g-2" [formGroup]="carnetFormGroup" (submit)="Enviar();" >
+        <div class="mb-3 row form-gp">
+          <label for="ci" class="col-sm-2 col-form-label">Cédula</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="ci" placeholder="12345678" formControlName="ci" name="ci" required>
+          </div>
         </div>
-        <div class="form-gp">
-
-          <input type="text" id="fecha_emision" placeholder="Fecha de emision" formControlName="fechaEmision" name="fecha_emision" required>
+        <div class="mb-3 row form-gp">
+          <label for="fecha_emision" class="col-sm-2 col-form-label">Fecha de Emision</label>
+          <div class="col-sm-10">
+            <input type="date" class="form-control" id="fecha_emision" formControlName="fecha_emision" name="fecha_emision" required>
+          </div>
         </div>
-        <div class="form-gp">
-          <input type="text" id="fecha_vencimiento" placeholder="Fecha de vencimiento" formControlName="fechaVencimiento" name="fecha_vencimiento" required>
+        <div class="mb-3 row form-gp">
+          <label for="fecha_vencimiento" class="col-sm-2 col-form-label">Fecha de Vencimiento</label>
+          <div class="col-sm-10">
+            <input type="date" class="form-control" id="fecha_vencimiento" formControlName="fecha_vencimiento" name="fecha_vencimiento" required>
+          </div>
         </div>
-        <div class="form-gp">
-          <label for="imagen" style="margin-right: 1vw;" >Imagen:</label>
-          <input type="file" id="imagen" formControlName="imagen" name="imagen" required>
+        <div class="mb-3">
+          <label for="imagen" class="form-label">Seleccione una imagen</label>
+          <input class="form-control" type="file" accept="image/jpeg, image/png" id="imagen" formControlName="imagen" name="imagen" required>
         </div>
-        <button class="btn-primary btn " type="submit" >Enviar Datos</button>
       </form>
+    </div>
+
+    <div class="card-footer">
+      <button class="btn-primary btn btn-submit " (click)="Enviar()" >Enviar Datos</button>
     </div>
   </div>
 
