--- a/src/app/components/hubpages/carnetsalud/carnetsalud.component.html
+++ b/src/app/components/hubpages/carnetsalud/carnetsalud.component.html
@@ -1,6 +1,6 @@
 <div class="fondo">
   <div class="card" >
-    <h5 class="card-header header-card">Cargar carnet</h5>
+    <h5 class="card-header header-card">Cargar Carnet de Salud</h5>
     <div class="card-body text-center">
       <form class="row g-2" [formGroup]="carnetFormGroup" (submit)="Enviar();" >
         <div class="mb-3 row form-gp">
