--- a/src/app/components/hubpages/agenda/agenda.component.css
+++ b/src/app/components/hubpages/agenda/agenda.component.css
@@ -97,7 +97,12 @@ body {
   width: 200px;
 }
 .container{
-  width: 90vw;
+  min-width: 100vw;
+  min-height: 87vh;
+  max-height: 87vh;
+  width: 100%;
+  height: 100%;
+  background-image: url("/assets/ucupatio.jpg");
 }
 button {
   padding: 10px;
@@ -108,6 +113,8 @@ button {
   max-height: 75vh;
 }
 
+.fondo{
+}
 
 
 
