--- a/src/app/components/hubpages/agenda/agenda.component.html
+++ b/src/app/components/hubpages/agenda/agenda.component.html
@@ -1,5 +1,4 @@
 <div class="fondo">
-  <div class="container mt-5">
     <div class="row justify-content-center">
       <div class="card">
         <div class="card-header">
@@ -30,8 +29,8 @@
                   <div class="form-group">
                     <label for="periodo">Periodo</label>
                     <select id="periodo" formControlName="periodo" name="periodo" required>
-                      <option *ngFor="let periodo of periodos" value="{{periodo.fch_Inicio}}/{{periodo.fch_Fin}}" >
-                        {{periodo.fch_Inicio}}/{{periodo.fch_Fin}}
+                      <option *ngFor="let periodo of this.periodos" value="{{periodo.fch_Inicio}}/{{periodo.fch_Fin}}" >
+                        {{ periodo.getFechaLinda(1)}}/{{periodo.getFechaLinda(2)}}
                       </option>
                     </select>
                   </div>
@@ -65,6 +64,8 @@
 
             </div>
           </form>
+        </div>
+        <div class="card-footer">
           <div class="navigation-container">
             <button class="btn btn-secondary" (click)="prevStep()" [disabled]="currentStep === 1">Previous</button>
             <button class="btn btn-primary" (click)="nextStep()" [disabled]="currentStep === 4">Next</button>
@@ -72,7 +73,6 @@
         </div>
       </div>
     </div>
-  </div>
 </div>
 
 <!--
