--- a/src/app/components/loggedhub/loggedhub.component.html
+++ b/src/app/components/loggedhub/loggedhub.component.html
@@ -84,10 +84,10 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="datospersonales">Editar Datos</a>
           </li>
-          <li class="nav-item" [hidden]="!isFuncionario">
+          <li class="nav-item" [hidden]="isFuncionario">
             <a class="nav-link" routerLink="/hub/admin/periodos">Periodos</a>
           </li>
-          <li class="nav-item" [hidden]="!isFuncionario">
+          <li class="nav-item" [hidden]="isFuncionario">
             <a class="nav-link" routerLink="/hub/admin/listardesactualizados">Funcionarios Desactualizados</a>
           </li>
         </ul>
