--- a/src/app/components/loggedhub/loggedhub.component.html
+++ b/src/app/components/loggedhub/loggedhub.component.html
@@ -76,13 +76,13 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" routerLink="carnetsalud">Carnet</a>
+            <a class="nav-link" routerLink="carnetsalud" [hidden]="!isFuncionario">Carnet</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" routerLink="agendarme">Agenda</a>
+            <a class="nav-link" aria-current="page" routerLink="agendarme" [hidden]="!isFuncionario">Agenda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="datospersonales">Editar Datos</a>
+            <a class="nav-link" routerLink="datospersonales" [hidden]="!isFuncionario">Editar Datos</a>
           </li>
           <li class="nav-item" [hidden]="isFuncionario">
             <a class="nav-link" routerLink="/hub/admin/periodos">Periodos</a>
