--- a/src/app/components/hubpages/agenda/agenda.component.html
+++ b/src/app/components/hubpages/agenda/agenda.component.html
@@ -57,7 +57,7 @@
                 <div>
                   <h5>Numero : {{turno.numero}}</h5>
                   <h5>Cedula : {{getCI()}}</h5>
-                  <h5>Fecha : {{turno.fecha_Agenda}}</h5>
+                  <h5>Fecha : {{getFechita(turno.fecha_Agenda)}}</h5>
                   <h5>Hora : {{getHora(turno.fecha_Agenda)}}</h5>
                 </div>
                 <button class="btn btn-success" (click)="onSubmit()">
