--- a/src/app/components/hubpages/user/user.component.html
+++ b/src/app/components/hubpages/user/user.component.html
@@ -1,1 +1,13 @@
-<p>user works!</p>
+<div class="card" style="width: 18rem;">
+  <img [src]="image" class="card-img-top" alt="carnet">
+  <div class="card-body">
+    <h5 class="card-title">Datos del Funcionario</h5>
+    <p> Nombre :  {{func.nombre}}</p>
+    <p> Apellido :  {{func.apellido}}</p>
+    <p> Fecha Nacimiento :  {{func.fch_Nac}}</p>
+    <p> Ci :  {{func.ci}}</p>
+    <p> Email :  {{func.email}}</p>
+    <p> Direccion :  {{func.direccion}}</p>
+    <p> Telefono :  {{func.telefono}}</p>
+  </div>
+</div>
