--- a/src/app/components/loggedhub/loggedhub.component.html
+++ b/src/app/components/loggedhub/loggedhub.component.html
@@ -85,10 +85,10 @@
             <a class="nav-link" routerLink="datospersonales" [hidden]="!isFuncionario">Editar Datos</a>
           </li>
           <li class="nav-item" [hidden]="isFuncionario">
-            <a class="nav-link" routerLink="/hub/admin/periodos">Periodos</a>
+            <a class="nav-link" routerLink="periodos">Periodos</a>
           </li>
           <li class="nav-item" [hidden]="isFuncionario">
-            <a class="nav-link" routerLink="/hub/admin/listardesactualizados">Funcionarios Desactualizados</a>
+            <a class="nav-link" routerLink="listardesactualizados">Funcionarios Desactualizados</a>
           </li>
         </ul>
         <span class="navbar-text">
