--- a/src/app/components/hubpages/admin/abrirperiodo/abrirperiodo.component.html
+++ b/src/app/components/hubpages/admin/abrirperiodo/abrirperiodo.component.html
@@ -2,32 +2,29 @@
     <div class="card">
         <div class="card-body">
             <h1 class="card-title">Abrir periodo</h1>
-            <form class="row g-2" [formGroup]="abrirPeriodoGroup" (submit)="enviar();">
                 <div class="mb-3 row form-gp">
-                    <label for="fechaInicio" class="col-sm-2 col-form-label">Fecha de inicio</label>
+                    <label class="col-sm-2 col-form-label">Fecha de inicio</label>
                     <div class="col-sm-10">
-                      <input type="date" class="form-control" id="fechaInicio" formControlName="fechaInicio" name="fechaInicio" required>
+                      <input type="date"
+                             [(ngModel)]="fechainicio"
+                             [min]="min"
+                             [max]="max"
+                             class="form-control" >
                     </div>
                   </div>
                   <div class="mb-3 row form-gp">
-                    <label for="fechaFin" class="col-sm-2 col-form-label">Fecha de fin</label>
+                    <label class="col-sm-2 col-form-label">Fecha de fin</label>
                     <div class="col-sm-10">
-                      <input type="date" class="form-control" id="fechaFin" formControlName="fechaFin" name="fechaFin" required>
+                      <input type="date"
+                             [(ngModel)]="fechafin"
+                             [min]="min"
+                             [max]="max"
+                             class="form-control" >
                     </div>
                   </div>
-                  <div class="mb-3 row form-gp">
-                    <label for="semestre" class="col-sm-2 col-form-label">Numero de semestre</label>
-                    <div class="col-sm-10">
-                      <input type="date" class="form-control" id="semestre" formControlName="semestre" name="semestre" required>
-                    </div>
-                  </div>
-                  <div class="mb-3 row form-gp">
-                    <label for="anio" class="col-sm-2 col-form-label">Año</label>
-                    <div class="col-sm-10">
-                      <input type="date" class="form-control" id="anio" formControlName="anio" name="anio" required>
-                    </div>
-                  </div>
-            </form>
+                  <button class="btn btn-primary" (click)="enviar()">
+                    Enviar
+                  </button>
         </div>
     </div>
 </div>
